# blueberry

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  xmake.lua
imgui/: imconfig.h
misc/: license.txt  readme.txt
rules/: README.md  rul100.txt  rul101.txt  rul102.txt  rul103.txt  rul104.txt  rul105.txt  rul106.txt  rul107.txt  rul108.txt  rul109.txt  rul110.txt  rul111.txt  rul112.txt  rul113.txt  rul114.txt  rul115.txt  rul116.txt  rul117.txt  rul118.txt  rul119.txt  rul120.txt  rul121.txt  rul122.txt  rul123.txt  rul124.txt  rul125.txt  rul126.txt  rul127.txt  rul128.txt  rul129.txt  rul130.txt  rul131.txt  rul132.txt  rul133.txt  rul134.txt  rul135.txt  rul136.txt  rul137.txt  rul138.txt  (+22 more)
src/: apply_rule.cpp  common.hpp  dear_imgui.hpp  docs.cpp  edit_rule.cpp  frame_main.cpp  imgui_config.hpp  load_rule.cpp  main.cpp  record_rule.cpp  rule.hpp  rule_algo.hpp  tests.cpp  tile.hpp  tile_base.hpp  utils.hpp
